feat(monitor): support single-file mode (inline TG_TOKEN/TG_CHAT) + optional.env and customizable messages

--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,61 @@ SWAP_WARN=60
 # Список контейнеров через запятую: имена или container id
 # ============================================================
 CONTAINERS="nginx, mysql, redis"
+
+
+# ============================================================
+# Тексты уведомлений (опционально, можно менять без правки скрипта)
+# Плейсхолдеры: {CODE} {FAILS} {WEB} {TIME} {NAME} {VALUE} {WARN} {CT}
+# ============================================================
+MSG_HTTP_DOWN_SERVICE_UP="❌ Сайт недоступен. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Служба {WEB} работает."
+MSG_HTTP_DOWN_SERVICE_DOWN="❌ Сайт недоступен. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Служба {WEB} не работает."
+MSG_HTTP_DOWN_NO_SERVICE="❌ Сайт недоступен. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Веб-сервис на сервере не обнаружен."
+MSG_HTTP_RECOVERED="✅ Сайт восстановился. Код: {CODE}. Время ответа: {TIME} сек"
+MSG_METRIC_ALERT="⚠️ {NAME}: {VALUE}% (порог {WARN}%)"
+MSG_METRIC_RECOVERED="✅ {NAME} нормализовался: {VALUE}%"
+MSG_CONTAINER_DOWN="❌ Контейнер {CT} остановлен"
+MSG_CONTAINER_UP="✅ Контейнер {CT} снова запущен"
+MSG_SERVICE_RECOVER_HTTP_DOWN="⚠️ Служба {WEB} восстановилась, но сайт все еще недоступен."
+MSG_SERVICE_STOPPED_AFTER_HTTP_DOWN="❌ Сайт недоступен и служба {WEB} остановилась после этого."
+
+# Имена метрик (для алертов)
+NAME_CPU="Нагрузка CPU"
+NAME_RAM="Оперативная память"
+NAME_DISK="Диск /"
+NAME_SWAP="Swap-память"
+
+# ============================================================
+# Тексты предупреждений/логов (опционально)
+# Плейсхолдеры: {CODE} {FAILS} {THRESHOLD} {WEB} {NAME} {VALUE} {CT} {TIME} {LINES} {LINE} {CMD} {EXIT} {FILE} {HOST} {SCRIPT}
+# ============================================================
+ERR_EARLY_STDERR="{TIME} [FATAL][EARLY] line={LINE} cmd='{CMD}' exit={EXIT}"
+LOG_EARLY="{TIME} [FATAL][EARLY] line={LINE} cmd='{CMD}' exit={EXIT}"
+WARN_ENV_MISSING="WARN: .env not found: {FILE}. Using defaults."
+LOG_ENV_MISSING=".env not found: {FILE}. Using defaults."
+ERR_CMD_REQUIRED="FATAL: {CMD} is required"
+ERR_FATAL_STDERR="[FATAL] line={LINE} cmd='{CMD}' exit={EXIT}"
+LOG_FATAL_ON_ERROR="{HOST}:{SCRIPT}:{LINE} cmd='{CMD}' exit={EXIT}"
+
+WARN_TG_NOT_CONFIGURED="WARN: Telegram is not configured (TG_TOKEN/TG_CHAT are empty)"
+WARN_URL_MISSING_HTTP_ENABLED="WARN: ENABLE_HTTP_MONITOR=1 but URL is not set"
+WARN_URL_AND_NO_WEB="WARN: URL is not set and no web service detected"
+
+LOG_TG_NOT_CONFIGURED="Telegram is not configured (TG_TOKEN/TG_CHAT are empty)"
+LOG_HTTP_FAIL="HTTP check failed: code={CODE}, fails={FAILS}, threshold={THRESHOLD}"
+LOG_URL_DOWN_SERVICE_UP="URL down but service {WEB} is running"
+LOG_URL_DOWN_SERVICE_DOWN="URL down and service {WEB} is not running"
+LOG_URL_DOWN_NO_SERVICE="URL down and no web service detected"
+LOG_METRIC_ALERT="{NAME} alert: {VALUE}%"
+LOG_CONTAINER_STOPPED="Container {CT} stopped"
+LOG_SERVICE_RECOVER_HTTP_DOWN="Service {WEB} recovered but HTTP is still down"
+LOG_ROTATED="Log rotated (kept last {LINES} lines)"
+LOG_STATE_CREATED="State file created"
+LOG_TG_SEND_FAILED="Failed to send Telegram message"
+LOG_HTTP_DOWN_CONFIRMED="HTTP DOWN confirmed (code={CODE})"
+LOG_HTTP_RECOVERED="HTTP recovered, time={TIME}s, code={CODE}"
+LOG_METRIC_RECOVERED="{NAME} recovered: {VALUE}%"
+LOG_CONTAINER_STARTED="Container {CT} started"
+LOG_MONITOR_STARTED="Monitor run started"
+LOG_MONITOR_FINISHED="Monitor run finished"
+LOG_HTTP_AND_SERVICE_DOWN="HTTP already down and service {WEB} is now stopped"
+LOG_ANOTHER_INSTANCE="Another instance is running, exiting"
