feat(monitor): improve web-service detection and URLS alerts + add service recovery notices

--- a/.env.example
+++ b/.env.example
@@ -65,18 +65,20 @@ CONTAINERS="nginx, mysql, redis"
 
 # ============================================================
 # Тексты уведомлений (опционально, можно менять без правки скрипта)
-# Плейсхолдеры: {CODE} {FAILS} {WEB} {TIME} {NAME} {VALUE} {WARN} {CT} {URL}
+# Плейсхолдеры: {CODE} {FAILS} {WEB} {WEB_ACTIVE} {WEB_INACTIVE} {TIME} {NAME} {VALUE} {WARN} {CT} {URL}
 # ============================================================
-MSG_HTTP_DOWN_SERVICE_UP="❌ Сайт недоступен: {URL}. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Служба {WEB} работает."
-MSG_HTTP_DOWN_SERVICE_DOWN="❌ Сайт недоступен: {URL}. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Служба {WEB} не работает."
+MSG_HTTP_DOWN_SERVICE_UP="❌ Сайт недоступен: {URL}. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Активные: {WEB_ACTIVE}. Неактивные: {WEB_INACTIVE}."
+MSG_HTTP_DOWN_SERVICE_DOWN="❌ Сайт недоступен: {URL}. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Активные: {WEB_ACTIVE}. Неактивные: {WEB_INACTIVE}."
 MSG_HTTP_DOWN_NO_SERVICE="❌ Сайт недоступен: {URL}. HTTP {CODE}. Ошибка {FAILS}-й раз подряд. Веб-сервис на сервере не обнаружен."
 MSG_HTTP_RECOVERED="✅ Сайт восстановился: {URL}. Код: {CODE}. Время ответа: {TIME} сек"
+MSG_HTTP_UP_SERVICE_DOWN="⚠️ Сайт доступен: {URL}. Но службы остановлены: {WEB_INACTIVE}."
+MSG_HTTP_UP_SERVICE_RECOVER="✅ Сайт доступен: {URL}. Службы восстановлены: {WEB_ACTIVE}."
 MSG_METRIC_ALERT="⚠️ {NAME}: {VALUE}% (порог {WARN}%)"
 MSG_METRIC_RECOVERED="✅ {NAME} нормализовался: {VALUE}%"
 MSG_CONTAINER_DOWN="❌ Контейнер {CT} остановлен"
 MSG_CONTAINER_UP="✅ Контейнер {CT} снова запущен"
-MSG_SERVICE_RECOVER_HTTP_DOWN="⚠️ Служба {WEB} восстановилась, но сайт все еще недоступен."
-MSG_SERVICE_STOPPED_AFTER_HTTP_DOWN="❌ Сайт недоступен и служба {WEB} остановилась после этого."
+MSG_SERVICE_RECOVER_HTTP_DOWN="⚠️ Службы восстановились: {WEB_ACTIVE}. Но сайт все еще недоступен."
+MSG_SERVICE_STOPPED_AFTER_HTTP_DOWN="❌ Сайт недоступен и службы остановились: {WEB_INACTIVE}."
 
 # Имена метрик (для алертов)
 NAME_CPU="Нагрузка CPU"
@@ -86,7 +88,7 @@ NAME_SWAP="Swap-память"
 
 # ============================================================
 # Тексты предупреждений/логов (опционально)
-# Плейсхолдеры: {CODE} {FAILS} {THRESHOLD} {WEB} {NAME} {VALUE} {CT} {TIME} {LINES} {LINE} {CMD} {EXIT} {FILE} {HOST} {SCRIPT} {URL} {URLS}
+# Плейсхолдеры: {CODE} {FAILS} {THRESHOLD} {WEB} {NAME} {VALUE} {CT} {TIME} {LINES} {LINE} {CMD} {EXIT} {FILE} {HOST} {SCRIPT} {URL} {URLS} {WEB_ACTIVE} {WEB_INACTIVE}
 # ============================================================
 ERR_EARLY_STDERR="{TIME} [FATAL][EARLY] line={LINE} cmd='{CMD}' exit={EXIT}"
 LOG_EARLY="{TIME} [FATAL][EARLY] line={LINE} cmd='{CMD}' exit={EXIT}"
@@ -105,9 +107,13 @@ LOG_HTTP_FAIL="HTTP check failed for {URL}: code={CODE}, fails={FAILS}, threshol
 LOG_URL_DOWN_SERVICE_UP="URL down for {URL}, service {WEB} is running"
 LOG_URL_DOWN_SERVICE_DOWN="URL down for {URL}, service {WEB} is not running"
 LOG_URL_DOWN_NO_SERVICE="URL down for {URL}, no web service detected"
+LOG_HTTP_UP_SERVICE_DOWN="URL up for {URL}, but services stopped: {WEB_INACTIVE}"
+LOG_HTTP_UP_SERVICE_RECOVER="URL up for {URL}, services recovered: {WEB_ACTIVE}"
 LOG_METRIC_ALERT="{NAME} alert: {VALUE}%"
 LOG_CONTAINER_STOPPED="Container {CT} stopped"
 LOG_SERVICE_RECOVER_HTTP_DOWN="Service {WEB} recovered but HTTP is still down for {URLS}"
+LOG_WEB_ACTIVE="Web services active: {WEB_ACTIVE}"
+LOG_WEB_INACTIVE="Web services inactive: {WEB_INACTIVE}"
 LOG_ROTATED="Log rotated (kept last {LINES} lines)"
 LOG_STATE_CREATED="State file created"
 LOG_TG_SEND_FAILED="Failed to send Telegram message"
